# screenshot-classification

./: .gitignore  CMakeLists.txt  Makefile  README.md  benchmark.sh  build.sh  classifier.c  colab_setup.py  flowchart.drawio  plot_results.py  predict.c  stb_image.h  training.c
include/: common.h  feature_extraction.cuh  screenshot_utils.h
parallel/: CMakeLists.txt  FINAL_REPORT.md  Makefile  README.md  RESULTS_SUMMARY.md  cuda_utils.cuh  feature_extraction.cu  knn.cu  predict.cu  training.cu
parallel-optimized/: Makefile  feature_extraction.cu  predict.cu  stb_image_impl.cu  training.cu
parallel-shared-colsc/: Makefile  feature_extraction.cu  knn.cu  predict.cu  training.cu
parallel-shared-mem/: feature_extraction.cu  predict.cu  training.cu
screenshot_classification_results/: common.h  knn.cu  main.cu  visualize_performance.py
sequential/: CMakeLists.txt  Makefile  PROJECT_REPORT.md  README.md  predict.c  training.c
src/: cuda_visualize_performance.py  feature_extraction.cu  knn.cu  main.cu
